Update to the latest limine

--- a/limine.cfg
+++ b/limine.cfg
@@ -3,6 +3,5 @@ TIMEOUT=5
 :OS
 PROTOCOL=stivale
 
-KERNEL_PARTITION=0
-KERNEL_PATH=kernel.elf
+KERNEL_PATH=bios://:0/kernel.elf
 KERNEL_PROTO=stivale
