--- a/limine.cfg
+++ b/limine.cfg
@@ -5,3 +5,9 @@ PROTOCOL=stivale
 
 KERNEL_PATH=bios://:0/kernel.elf
 KERNEL_PROTO=stivale
+
+:OSs2
+PROTOCOL=stivale
+
+KERNEL_PATH=bios://:0/kernel2.elf
+KERNEL_PROTO=stivale2
