--- a/limine.cfg
+++ b/limine.cfg
@@ -1,9 +1,14 @@
 TIMEOUT=5
 
 :OS
-KERNEL_PATH=bios://:0/kernel.elf
+PROTOCOL=stivale
+
+KERNEL_PARTITION=0
+KERNEL_PATH=kernel.elf
 KERNEL_PROTO=stivale
 
-:OSs2
-KERNEL_PATH=bios://:0/kernel2.elf
+:OS2
+KERNEL_PARTITION=0
+KERNEL_PATH=kernel2.elf
 KERNEL_PROTO=stivale2
+
