--- a/limine.cfg
+++ b/limine.cfg
@@ -1,14 +1,14 @@
 TIMEOUT=5
 
-:OS
+:stivale
 PROTOCOL=stivale
 
-KERNEL_PARTITION=0
-KERNEL_PATH=kernel.elf
+KERNEL_PATH=boot:///kernel.elf
 KERNEL_PROTO=stivale
 
-:OS2
-KERNEL_PARTITION=0
-KERNEL_PATH=kernel2.elf
+:stivale2
+PROTOCOL=stivale2
+
+KERNEL_PATH=boot:///kernel2.elf
 KERNEL_PROTO=stivale2
 
