--- a/limine.cfg
+++ b/limine.cfg
@@ -3,12 +3,11 @@ TIMEOUT=5
 :stivale
 PROTOCOL=stivale
 
-KERNEL_PATH=boot:///kernel.elf
+KERNEL_PATH=boot:///stivale.elf
 KERNEL_PROTO=stivale
 
 :stivale2
 PROTOCOL=stivale2
 
-KERNEL_PATH=boot:///kernel2.elf
+KERNEL_PATH=boot:///stivale2.elf
 KERNEL_PROTO=stivale2
-
