--- a/src-stivale2/Makefile
+++ b/src-stivale2/Makefile
@@ -1,16 +1,32 @@
-TARGET := kernel2.elf
+TARGET := stivale2.elf
 
-CC              = cc
-CFLAGS          = -O2
-LD              = ld
-QEMU            = qemu-system-x86_64
-QEMUFLAGS       = -m 1G -enable-kvm -cpu host
-LDINTERNALFLAGS := -Tlinker.ld -static -nostdlib -no-pie
-INTERNALCFLAGS  := -I../stivale -I. -ffreestanding -fno-stack-protector   \
-	-fno-pic -fomit-frame-pointer -mno-80387 -mno-mmx -mno-3dnow -mno-sse \
-	-mno-sse2 -masm=intel -mcmodel=kernel
-CFILES    := $(shell find ./ -type f -name '*.c')
-OBJ       := $(CFILES:.c=.o)
+CC        = cc
+LD        = ld
+
+CFLAGS    = -Wall -Wextra -O2 -pipe
+
+LDINTERNALFLAGS := \
+	-Tlinker.ld    \
+	-static        \
+	-nostdlib      \
+	-no-pie
+
+INTERNALCFLAGS  :=       \
+	-I.                  \
+	-I../limine/stivale  \
+	-ffreestanding       \
+	-fno-stack-protector \
+	-fno-pic             \
+	-mno-80387           \
+	-mno-mmx             \
+	-mno-3dnow           \
+	-mno-sse             \
+	-mno-sse2            \
+	-mcmodel=kernel      \
+	-mno-red-zone
+
+CFILES := $(shell find ./ -type f -name '*.c')
+OBJ    := $(CFILES:.c=.o)
 
 all: $(TARGET)
 
@@ -21,4 +37,4 @@ $(TARGET): $(OBJ)
 	$(CC) $(CFLAGS) $(INTERNALCFLAGS) -c $< -o $@
 
 clean:
-	rm -rf $(TARGET) *.o
+	rm -rf $(TARGET) $(OBJ)
