--- a/src-stivale2/Makefile
+++ b/src-stivale2/Makefile
@@ -18,7 +18,11 @@ INTERNALCFLAGS  :=       \
 	-ffreestanding       \
 	-fno-stack-protector \
 	-fno-pic -fpie       \
-	-mgeneral-regs-only  \
+	-mno-80387           \
+	-mno-mmx             \
+	-mno-3dnow           \
+	-mno-sse             \
+	-mno-sse2            \
 	-mno-red-zone
 
 CFILES := $(shell find ./ -type f -name '*.c')
