--- a/stivale-barebones/limine.cfg
+++ b/stivale-barebones/limine.cfg
@@ -1,12 +1,7 @@
 # Timeout in seconds that Limine will use before automatically booting.
-TIMEOUT=5
+TIMEOUT=3
 
 :stivale
+KASLR=no
 PROTOCOL=stivale
-
 KERNEL_PATH=boot:///stivale.elf
-
-:stivale2
-PROTOCOL=stivale2
-
-KERNEL_PATH=boot:///stivale2.elf
