Explain what PMR flag does

--- a/stivale-barebones/limine.cfg
+++ b/stivale-barebones/limine.cfg
@@ -1,7 +1,7 @@
 # Timeout in seconds that Limine will use before automatically booting.
 TIMEOUT=3
 
-:stivale
+:stivale-barebones
 KASLR=no
 PROTOCOL=stivale
-KERNEL_PATH=boot:///stivale.elf
+KERNEL_PATH=boot:///kernel.elf
