--- a/stivale2-barebones/limine.cfg
+++ b/stivale2-barebones/limine.cfg
@@ -1,7 +1,7 @@
 # Timeout in seconds that Limine will use before automatically booting.
 TIMEOUT=3
 
-:stivale2
+:stivale2-barebones
 KASLR=no
 PROTOCOL=stivale2
-KERNEL_PATH=boot:///stivale2.elf
+KERNEL_PATH=boot:///kernel.elf
