Use actual linker to link final kernel rather than C compiler driver

--- a/stivale-barebones/src/Makefile
+++ b/stivale-barebones/src/Makefile
@@ -1,16 +1,19 @@
 KERNEL := kernel.elf
 
 CC = cc
+LD = ld
 
 CFLAGS = -Wall -Wextra -O2 -pipe
+LDFLAGS =
 
-INTERNALLDFLAGS := \
-	-fno-pic -fpie \
-	-Wl,-static,-pie,--no-dynamic-linker,-ztext \
-	-static-pie    \
-	-nostdlib      \
-	-Tlinker.ld    \
-	-z max-page-size=0x1000
+INTERNALLDFLAGS :=         \
+	-Tlinker.ld            \
+	-nostdlib              \
+	-zmax-page-size=0x1000 \
+	-static                \
+	-pie                   \
+	--no-dynamic-linker    \
+	-ztext
 
 INTERNALCFLAGS  :=       \
 	-I.                  \
@@ -32,11 +35,11 @@ OBJ    := $(CFILES:.c=.o)
 
 all: $(KERNEL)
 
-$(KERNEL): $(OBJ)
-	$(CC) $(INTERNALLDFLAGS) $(OBJ) -o $@
-
 stivale.h:
 	wget https://github.com/stivale/stivale/raw/master/stivale.h
+
+$(KERNEL): $(OBJ)
+	$(LD) $(OBJ) $(LDFLAGS) $(INTERNALLDFLAGS) -o $@
 
 %.o: %.c stivale.h
 	$(CC) $(CFLAGS) $(INTERNALCFLAGS) -c $< -o $@
