Update stivale2 example

--- a/stivale2-barebones/kernel/Makefile
+++ b/stivale2-barebones/kernel/Makefile
@@ -10,23 +10,21 @@ INTERNALLDFLAGS :=         \
 	-Tlinker.ld            \
 	-nostdlib              \
 	-zmax-page-size=0x1000 \
-	-static                \
-	-pie                   \
-	--no-dynamic-linker    \
-	-ztext
+	-static
 
 INTERNALCFLAGS :=        \
 	-I.                  \
 	-std=gnu11           \
 	-ffreestanding       \
 	-fno-stack-protector \
-	-fpie                \
+	-fno-pic             \
 	-mno-80387           \
 	-mno-mmx             \
 	-mno-3dnow           \
 	-mno-sse             \
 	-mno-sse2            \
 	-mno-red-zone        \
+	-mcmodel=kernel      \
 	-MMD
 
 CFILES      := $(shell find ./ -type f -name '*.c')
